<resources>
    <string name="app_name">M10</string>
    <string name="action_settings">Settings</string>
    <string name="button0">0</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="buttonPlus">+</string>
    <string name="buttonMinus">-</string>
    <string name="buttonTime">*</string>
    <string name="buttonDivided">/</string>
    <string name="buttonIs">=</string>
    <string name="buttonPoint">.</string>
    <string name="buttonSin">Sin</string>
    <string name="buttonCos">Cos</string>
    <string name="buttonN">N</string>
    <string name="buttonCE">CE</string>
    <string name="buttonUConversion">进制</string>
    <string name="buttonDConversion">单位</string>
    <string name="buttonMenu">Menu</string>
    <string name="editText">editText</string>
    <string name="buttonHelp">Help</string>
    <string name="buttonExit">Exit</string>


</resources>
