<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="cn.edu.bistu.cs.se.m10.MainActivity"
    tools:showIn="@layout/activity_main">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">
            <Button
                android:id="@+id/buttonUConversion"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/buttonUConversion"
                android:textAlignment="center"
                android:textSize="18sp"
                android:background="@drawable/button"
                android:textColor="#fff"/>

            <Button
                android:id="@+id/buttonDConversion"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/buttonDConversion"
                android:textAlignment="center"
                android:textSize="18sp"
                android:background="@drawable/button"
                android:textColor="#fff"/>

            <Button
                android:text="("
                android:id="@+id/left"
                android:layout_weight="1"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/button"
                android:textColor="#fff"/>

            <Button
                android:text=")"
                android:id="@+id/right"
                android:layout_weight="1"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/button"
                android:textColor="#fff"/>

            <!--<Button-->
                <!--android:id="@+id/buttonMenu"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="match_parent"-->
                <!--android:layout_weight="3"-->
                <!--android:onClick="showPopup"-->
                <!--android:text="@string/buttonMenu"-->
                <!--android:textAlignment="center"-->
                <!--android:textSize="15sp" />-->


        </LinearLayout>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/buttonCE"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/buttonCE"
                android:textAlignment="center"
                android:textSize="23sp"
                android:textColor="#fff"
                android:background="@drawable/buttonce"/>

            <Button
                android:id="@+id/buttonSin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/buttonSin"
                android:textAlignment="center"
                android:textSize="23sp"
                android:background="@drawable/button"
                android:textColor="#fff"/>

            <Button
                android:id="@+id/buttonCos"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/buttonCos"
                android:textAlignment="center"
                android:textSize="23sp"
                android:background="@drawable/button"
                android:textColor="#fff"/>

            <Button
                android:id="@+id/buttonN"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/buttonN"
                android:textAlignment="center"
                android:textSize="23sp"
                android:background="@drawable/button"
                android:textColor="#fff"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/button7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button7"
                android:textAlignment="center"
                android:textSize="25sp"
                android:background="@drawable/buttonnumber"
                android:textColor="#fff"/>

            <Button
                android:id="@+id/button8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button8"
                android:textAlignment="center"
                android:textSize="25sp"
                android:background="@drawable/buttonnumber"
                android:textColor="#fff"/>

            <Button
                android:id="@+id/button9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button9"
                android:textAlignment="center"
                android:textSize="25sp"
                android:background="@drawable/buttonnumber"
                android:textColor="#fff"/>

            <Button
                android:id="@+id/buttonPlus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/buttonPlus"
                android:textAlignment="center"
                android:textSize="25sp"
                android:background="@drawable/button"
                android:textColor="#fff"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:text="@string/button4"
                android:textAlignment="center"
                android:textSize="25sp"
                android:background="@drawable/buttonnumber"
                android:textColor="#fff"/>

            <Button
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:text="@string/button5"
                android:textAlignment="center"
                android:textSize="25sp"
                android:background="@drawable/buttonnumber"
                android:textColor="#fff"/>

            <Button
                android:id="@+id/button6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:text="@string/button6"
                android:textAlignment="center"
                android:textSize="25sp"
                android:background="@drawable/buttonnumber"
                android:textColor="#fff"/>

            <Button
                android:id="@+id/buttonMinus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:text="@string/buttonMinus"
                android:textAlignment="center"
                android:textSize="25sp"
                android:background="@drawable/button"
                android:textColor="#fff"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:text="@string/button1"
                android:textAlignment="center"
                android:textSize="25sp"
                android:background="@drawable/buttonnumber"
                android:textColor="#fff"/>

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:text="@string/button2"
                android:textAlignment="center"
                android:textSize="25sp"
                android:background="@drawable/buttonnumber"
                android:textColor="#fff"/>

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:text="@string/button3"
                android:textAlignment="center"
                android:textSize="25sp"
                android:background="@drawable/buttonnumber"
                android:textColor="#fff"/>

            <Button
                android:id="@+id/buttonTime"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:text="@string/buttonTime"
                android:textAlignment="center"
                android:textSize="25sp"
                android:background="@drawable/button"
                android:textColor="#fff"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/buttonIs"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:text="@string/buttonIs"
                android:textAlignment="center"
                android:textSize="25sp"
                android:background="@drawable/buttonis"
                android:textColor="#fff"/>

            <Button
                android:id="@+id/button0"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:text="@string/button0"
                android:textAlignment="center"
                android:textSize="25sp"
                android:background="@drawable/buttonnumber"
                android:textColor="#fff"/>

            <Button
                android:id="@+id/buttonPoint"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:text="@string/buttonPoint"
                android:textAlignment="center"
                android:textSize="25sp"
                android:background="@drawable/buttonnumber"
                android:textColor="#fff"/>

            <Button
                android:id="@+id/buttonDivided"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:text="@string/buttonDivided"
                android:textAlignment="center"
                android:textSize="25sp"
                android:background="@drawable/button"
                android:textColor="#fff"/>

        </TableRow>


    </TableLayout>

    <WebView
        android:id="@+id/webView"
        android:layout_width="wrap_content"
        android:layout_height="1dp">

    </WebView>


</LinearLayout>
